--- a/_posts/2013-01-08-1----.md
+++ b/_posts/2013-01-08-1----.md
@@ -1,7 +1,11 @@
-
-layout: post
-title: "My \"Setup\""
 ---
+layout: post
+title: "纵横英国记1[农场|义工]"
+description: ""
+category: 
+tags: [Travelling]
+---
+
 
 搭车，义工，徒步，睡沙发。英国，我要从南走到北。
 
