--- a/_posts/2013-01-08-1----.md
+++ b/_posts/2013-01-08-1----.md
@@ -1,41 +1,8 @@
 ---
 layout: post
-title: "Travelling"
+title: "travelling"
 ---
 
+Internet, you and I been acquainted for several years now and a formal introduction on my part is long overdue. I'm Dylan, a third year computer science major at UCLA. My passion for building things began in my adolescence when my grandfather, a retired electrical engineer, would take me into his office on summer afternoons to show me how circuits worked. In my freshman year of high school I downloaded the installer for Python 2.4 and the rest, as they say, is history. I've got a long way to go before I reach neckbeard status, though, and that's why I've decided to start recording my thoughts here. It's something of a rite of passage for developers to write their own weblog platforms, and while I use Tom Preston-Werner's static site generator [Jekyll](http://github.com/mojombo/jekyll) and a layout forked from existing ones by [John Duff](http://github.com/jduff/jduff.github.com) and [Tanner Burson](http://github.com/tannerburson/tannerburson.github.com), I've hacked together a system that should be pleasant to look at and just as nice for managing content.
 
-
-搭车，义工，徒步，睡沙发。英国，我要从南走到北。
-
-六月并不是一个残忍的季节，它过了四月的青黄不接和五月的葱茏苍茫，像刚步入20岁一样，青春如至，高喊：“世界是我们的”。七月，我刚过22岁，青春依然无比美好，却又痛楚起来，对青春所有不切实际的幻想，让我思考：世界究竟是不是我们的？
-
-于是从英国出发，我要探索一点点青春的可能性，也睁眼看看这世界。
-
-【农场 | 义工】
-我的旅程从南部城市Exeter之外30英里的一个小农场开始，之前通过workaway找到这家缺人帮忙的农场。农场属于Kate和Jamie，几个月前这对环游世界归来的新婚夫妇踏破铁鞋，终于在Devon郡的深山老林里发现了这片世外桃源。农场占地七公顷，纵横在一片丘陵上，周围零星散落几户人家，整个小镇不过百十号人。很早就听说，英国最好的生活是在英国的农村里，能够置身其中我自然早已心向往之，看看能不能如陶潜，东坡般悠然自得，躬耕陇上。
-短暂的熟悉后，发现农场一片百废待兴迹象，这对夫妇几个月前刚从上一任农场主手中得来，除了住宿的房车和仓库修葺完毕，其他如冷兵器时代战后的废墟，一花一木都亟待有人收拾。重任自然落在我等身上，喂马劈叉开始关心粮食和蔬菜。
-
-从易到难，第一天打扫一间尘封多年的马厩。一地马粪，杂草和报纸，历经多年沉积，竟厚达三尺有余，硬若水泥。于是乎，我等四人挽袖卷裤，用尽铁锹，铲子，扫帚，铲车等工具若干，把初来时的好奇化成永动机般挥舞的铁锹，耗时一个下午，往返于马圈和百米开外的粪山（dung moutain）数十次。终于在我连续强攻下，马厩如劫后重生，出泥青莲。我内心感叹：骑马风光一刻钟，养马扫圈数时日。心中养马的梦想却没有变过。
-
-初次干农活的笨拙和疲弱在往后几天开始凸显出来。门口的一方污泥杂草滩要被改造成一个功能齐全，能种能看能散步的小花园。看着完全没有被征服过的一片土地，难免一片壮志豪情，想象几日之后她就要变成一个浓妆淡抹总相宜的花园而不是眼前这方泥土，征服感被荷尔蒙召唤出来。我们用尽了一切看到过的审美标准和对一个“功能齐全花园”的想象，初步规划了这片泥潭，装备好铁锹，雨靴，手套，锯子（锯泥底的树根），斧头，预备好大石板铺路，木板做篱笆。计划是这样的：首先把淤泥全部铲出来，下面的树根砍掉，把地基铲平遇到地底坚硬的岩层为止；然后铺上适宜种植的泥土（top soil)；最后修好路和篱笆。就这么简单！嗯，就这么简单，谁知光把20平的淤泥铲干净，见到地底岩层就用了两天时间。遇到地底蜿蜒坚硬的树根时，心想人类文明进化几万年后，如果祖先看到有人还在用和他们一样原始的方式对抗自然会不会一声嘲笑。结果就是：妥协！使劲浑身力气终不能斩断一串老树根，自骂空有一身腱子肉！蚍蜉撼树般的挫败感如英国的阴雨天气不间断的循环。雨中泥里，摸爬滚打一礼拜，放过树根和蚯蚓，挖坑跑路，小花园终于开始有“小花园”般的样子。修修补补又几天，终于这片淤泥开始taking a shape ^^, 像18岁的少女，不再抗拒同桌的第10封情书，回家的路上坐在他的后座上。
-
-每天出现在手上的各种工具也有了亲切感，砍树一定要用那把锯，铲土一定要带那双手套，就像见暗恋姑娘一定要穿那件衬衣。万事无他，唯手熟尔，修的了花园也铺的了土路，建的好木屋（shack）。之后的几天我欢欣鼓舞的和Jamie开始改造一间木屋里的一间卧室。三合板，六合板，保温层，木地板，每天带着口罩拿着伸缩尺、铅笔，测算，锯木，安装。日子就这样流淌，看着没有缝隙的地板，保温双层处理后订上的木墙，45度防雨设计的屋顶，我想如果人人都自己建造自己的屋子，豆腐渣工程是不是会少一些？哈哈！
-
-义工欢乐多，多亏好厨师！每天汗水之后必是一顿英国大餐？！嗯，英国大餐，英国也有好吃的饭，英国人不是只会做fish&chips! Jamie负责每天的晚餐，厮曾在英国大厨Jamie Oliver的名店Jamie"'"s Itlian里做过厨师，真是羡慕Kate没有嫁错郎，每天吃大餐。因为住的偏，购物不方便，不能每天买新鲜的蔬菜，水果，所以每天吃的东西其实很简单，但是Jamie的神奇之处就是能用这些简单的材料做出色味俱佳的美食。很难想象，身为一个中国人你会每天期待吃一个英国人做的饭菜，嗯，唯Jamie君能做到！
-
-我想用这种旅行方式来试探青春的可能性，如果有巧合，那正是我22岁的生日能在这里留念。正巧那天不用干活，又天朗气清，祥云飘过，22年前必有神人降临，哈哈。大家决定去Cornwall的海滩玩耍顺便买台房车。沿着M5国道到Cornwall郡不到2小时的车程，一路向南，沿途风光自然略不同于北方（苏格兰）的针叶林景观，草木葱茏，海滩开阔，怪不得是英国人度假的上乘选择，一路多见一家人开房车托皮划艇和自行车，运动、烧烤、野营、回归自然，这就是英国人的假期。Cornwall的海滩太出名，也是英国少有能冲浪、游泳、划船的优良温和海滩。Newquay, Perranporth, St Evis冲浪者众多，但是这里很难见到中国人。一天开了6小时车晚上终于回家，我在这里过了难忘的生日，虽然简陋但是真诚温暖。翻了翻那天的日记，我写下：无论以后贫穷富有，得志失意，不要忘了爱和自由，诗与远方。诗意的活着！
-
-10天在这里度过，往后无尽的日子里我有多少个10天也找不回那时的感觉。从Kate和Jamie身上，我能体会一点英国人共有脾气和态度，友好，礼貌，也有大英帝国子民的自豪感。我也找到了现在年轻人生活的另一种状态，远离纷扰，悠然自得，即使没有太多钱和壮志，甘愿脚踏实地用双手丰富自己的生活！
-
-感谢Kate和Jamie，来年见，愿花园草长莺飞，自成风景！
-
-
-
-
-
-
-
-
-
-
-
+Naturally, this begs the question: what content will I be managing with this shiny new setup? In the long term, I want this blog to be a written record of my experience as a budding software developer. This summer I have an awesome job at [UCLA CENS](http://research.cens.ucla.edu) and a bunch of ideas for side projects, and when school resumes I'll go back to absorbing knowledge at what feels like an insanely high rate. From all of this I'm bound to have a lot to share, and when I do I'll post it here.
