--- a/_posts/2013-02-18-Rmap.md
+++ b/_posts/2013-02-18-Rmap.md
@@ -16,7 +16,7 @@ FYP( Final Year Project)现在的每个问题都是挑战,随着研究的深入,
 require("maps")
 require("mapdata")
 
-# Get city longitude and latitude from Google
+# get city longitude and latitude from Google
 dat = read.csv(text = "city,jd,wd
     Liverpool,-2.988625,53.408304
     London,-0.140076,51.521562
@@ -42,7 +42,7 @@ dat = read.csv(text = "city,jd,wd
     "
     )
 
-# Map UK territory
+# map UK territory
 map('worldHires', c('UK', 'Ireland', 'Isle of Man','Isle of Wight', 'Wales:Anglesey'), col = "gray90",fill =TRUE, xlim=c(-11,3), ylim=c(49,60.9), panel.first = grid())
 
 # add title
