--- a/_posts/2013-02-18-Rmap.md
+++ b/_posts/2013-02-18-Rmap.md
@@ -3,7 +3,7 @@ layout: post
 title: "用R画出我在英国去过的城市"
 ---
 
-FYP( Final Year Project)现在的每个问题都是挑战,随着研究的深入,目及之处净是黑暗和知识盲点,做完之后我可能会系统地写点感受。正好感冒发烧借机偷闲做点轻松简单的东西。
+FYP( Final Year Project)现在的每个问题都是挑战,随着研究的深入,目及之处净是黑暗和知识盲点,做完之后我可能会系统地写点感受。今天感冒发烧，正好借机偷闲做点轻松简单的东西。
 
 想着数据可视化的时候突然想不知道R能不能画出地图，如果用R画专业地图肯定非主流，但是基本的地理信息R还是能满足。分析```maps```和```mapdata```两个包，发现北美地区的数据尤其完善。看了yihui的 [这篇文章](http://yihui.name/cn/2008/10/china-map-and-city-locastions-with-r/)，本文也就顺便模仿了下，标出了我在英国行走过的城市。
 
